# unity

./: Cargo.toml
.github/workflows/: docs.yml
src/: app.rs  cppvector.rs  engine.rs  lib.rs  macro_context.rs  system.rs
src/engine/: rendering.rs  ui.rs
src/il2cpp/: api.rs  assembly.rs  class.rs  ffi.rs  method.rs  mod.rs  object.rs
src/system/: string.rs
unity-macro/: Cargo.toml
unity-macro/src/: il2cpp.rs  lib.rs  scan.rs  utils.rs
