[package]
name = "unity"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline = { git = "https://github.com/Raytwo/skyline-rs", branch = "preview" }
unity-macro = { path = "./unity-macro" }
memoffset = { version = "0.8.0" }
thiserror = { version = "1" }

[target.aarch64-skyline-switch.dependencies]
lazysimd = { git = "https://github.com/Raytwo/lazysimd" }
